# bocchi-launcher

./: .gitignore  Cargo.toml  game.json
Pseudo-Python-Code/: iso.py
src/: main.rs  ppsspp.rs
src/ui/: components.rs
src/utilities/: file.rs
